Fixed some minor spacing issues on secure.master template.
Display the first name of the logged in user instead of [USERNAME]

--- a/gooey-cms/gooeycms.control.webrole/css/admin-theme.css
+++ b/gooey-cms/gooeycms.control.webrole/css/admin-theme.css
@@ -65,7 +65,6 @@ select
 
 #logo 
 {
-	background: transparent url(../images/logo_gooey_internal.png) 0 0 no-repeat;
 	margin:10px 0 0 25px;
 	float: right;
 	font-weight:bold;
@@ -75,7 +74,6 @@ select
 	font-size:20px;
 	line-height:20px;
 	text-decoration:none;
-	padding-top: 92px;
 }
 
 #main 
